jlatexmath (0.9.5)

        * \left(...\right) was inactive in \mathsf

jlatexmath (0.9.4)

        * Update build.xml to add a base directory in zip archives.

        * Add \og and \fg.

        * In text mode, the normal dot must be a punctuation symbol.

        * Add \cal.

        * Add \it, \bf, \sc, ...

        * Add commands \textsc and \textcircled.

        * Fix a bug in the FOP plugin when latex is mixed with other
          image source.

        * $...$ was ignored

        * Add \raisebox and \romannumeral.

        * Handle options in \includegraphics.

        * Add a static method TeXFormula.setDefaultDPI().

        * Add a static method TeXFormula.setDPITarget(float dpi).

        * Add shadowbox, doublebox and ovalbox.

        * Fix bugs on rotatebox (bad default center), with the parser
          (...\end{foo}a... gave an error)) and improve the debug mode.

        * Add Unicode chars again and forgotten commands

        * Avoid the loading of Greek fonts in math mode in GeoGebra.

        * Add characters in Unicode.

        * Fix a bug on \bigtriangleup and \bigtriangledown (use stmary ones)

        * Add support for few Unicode characters.

        * Fix a bug of cyclic referency between atoms coming from Unicode
          mapping.

        * Convert foreign numbers into roman ones

        * Add a preview of an error in partial mode

        * Add the left quote and reduce slightly the space under for underarrows

        * The percent for comments was not handled

        * HTML entity &#8495; forgotten

        * Fix bug in aligned & alignedat env. (thanks to Graeme Kidd)

        * Add a thread-safe cache to cache the images generated from a formula

        * Can use dollar in \text or \mbox to switch into math mode

        * Add a static method TeXFormula.getPartialTeXFormula(String) which
          ignores errors and returns a partial TeXFormula (with no errors).
          Useful to display LaTeX on typing.
